<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bak"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:id="@+id/test"
        app:cardElevation="2dp"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:background="@drawable/bak"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="vertical"
            android:padding="16dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/awkat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_prayertimes"
                    android:textColor="#ffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/awkat"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/city"
                    android:textColor="#ffff"
                    android:textSize="24sp"
                    android:layout_marginLeft="40dp" />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isha"
                        android:textColor="#ffff"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/isha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:textColor="#ffff"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maghrib"
                        android:textColor="#ffff"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/maghrib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:textColor="#ffff"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asr"
                        android:textColor="#ffff"

                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/asr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:textColor="#ffff"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dohr"
                        android:textColor="#ffff"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/duhur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:textColor="#ffff"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffff"
                        android:text="@string/fajr"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/fajr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00"
                        android:textColor="#ffff"
                        android:textSize="16sp" />
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>