<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context="com.islamey.hamza.wazaker.ui.HomeFragment.HomeFragment"
    tools:ignore="UnusedAttribute">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:padding="7dp">

            <Button
                android:id="@+id/morningAzkarbtn"
                android:layout_width="303dp"
                android:layout_height="@dimen/btn_height"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/blue_btn"
                android:fontFamily="@font/tajawal_medium"
                android:text="@string/Morningazkar"
                android:textAppearance="@style/morning_style" />

            <Button
                android:id="@+id/eveningAzkarbtn"
                android:layout_width="303dp"
                android:layout_height="@dimen/btn_height"
                android:layout_below="@+id/morningAzkarbtn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/blue_btn"
                android:fontFamily="@font/tajawal_medium"
                android:text="@string/eveningAzkar"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <Button
                android:id="@+id/azkars_btn"
                android:layout_width="303dp"
                android:layout_height="@dimen/btn_height"
                android:layout_below="@id/eveningAzkarbtn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/blue_btn"
                android:fontFamily="@font/tajawal_medium"
                android:text="@string/AzkarandDoaa"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <Button
                android:id="@+id/counter_btn"
                android:layout_width="303dp"
                android:layout_height="@dimen/btn_height"
                android:layout_below="@id/azkars_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/blue_btn"
                android:text="@string/counter"
                android:fontFamily="@font/tajawal_medium"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/totalZekercounts"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/counter_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/blue_btn"
        android:padding="7dp"
        android:text="@string/totalzeker"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:fontFamily="@font/tajawal_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        tools:ignore="MissingConstraints,NotSibling" />


</androidx.constraintlayout.widget.ConstraintLayout>